--- a/pom.xml
+++ b/pom.xml
@@ -19,20 +19,25 @@
         Versions are based on IDE releases, e.g.: RELEASE691
         To create your own repository, use: nbm:populate-repository
         -->
-        <repository>
+        <!--repository>
             <id>netbeans</id>
             <name>NetBeans</name>
             <url>http://bits.netbeans.org/maven2/</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
-        </repository>
+        </repository-->
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.netbeans.api</groupId>
             <artifactId>org-netbeans-api-annotations-common</artifactId>
+            <version>RELEASE721</version>
+        </dependency>
+        <dependency>
+            <groupId>org.netbeans.api</groupId>
+            <artifactId>org-openide-modules</artifactId>
             <version>RELEASE721</version>
         </dependency>
         <dependency>
@@ -50,6 +55,8 @@
                 <version>3.8</version>
                 <extensions>true</extensions>
                 <configuration>
+                    <useOSGiDependencies>false</useOSGiDependencies>
+                    <verifyRuntime>warn</verifyRuntime>
                     <publicPackages>
                         <publicPackage>ru.isuzt.ruby.kernel.logger.*</publicPackage>
                     </publicPackages>
@@ -62,8 +69,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
 
@@ -80,6 +87,9 @@
         <resources>
             <resource>
                 <directory>src/main/ruby</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
             </resource>
         </resources>
     </build>
